--- a/adminconsole/Views/Shared/_Layout.cshtml
+++ b/adminconsole/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Locations" asp-action="Create">Add Location</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Locations" asp-action="Deleted">Deleted Locations</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
