--- a/adminconsole/Views/Shared/_Layout.cshtml
+++ b/adminconsole/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Locations" asp-action="Deleted">Deleted Locations</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark">Assign Privileges</a>
+                        </li>
                     </ul>
                 </div>
             </div>
