Locations radio is selected by default

--- a/adminconsole/Views/Locations/Index.cshtml
+++ b/adminconsole/Views/Locations/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="display-table-options">
     <div class="display-table-option">
-        <input type="radio" name="tables" onclick=selectLocations() /> Locations
+        <input type="radio" name="tables" onclick=selectLocations() checked/> Locations
     </div>
     <div class="display-table-option">
         <input type="radio" name="tables" onclick=selectContacts() /> Contact
