Got rid of broken hidden fields (Index)

--- a/adminconsole/Views/Locations/Index.cshtml
+++ b/adminconsole/Views/Locations/Index.cshtml
@@ -47,7 +47,7 @@
                     @Html.DisplayNameFor(model => model.Address)
                 </th>
                 <th>
-                    @Html.Hidden("hiddenCityHeader", "City")
+                    @Html.DisplayNameFor(model => model.City)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.PostalCode)
@@ -100,7 +100,7 @@
                         @Html.DisplayFor(modelItem => item.Address)
                     </td>
                     <td>
-                        @Html.Hidden("hiddenCity", item.City)
+                        @Html.DisplayFor(modelItem => item.City)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.PostalCode)
