Fixed details bug
swap DisplayNameFor with DisplayFor

--- a/adminconsole/Views/Locations/Details.cshtml
+++ b/adminconsole/Views/Locations/Details.cshtml
@@ -236,7 +236,7 @@
                     @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursTueClose)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursWedOpen)
+                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursWedOpen)
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursWedOpen)
