Changed ViewModel and Backend name
From:      LocationsContactSpecialQualities

To:           AllTables (viewmodel) and Locations (backend)

--- a/adminconsole/Views/Locations/Create.cshtml
+++ b/adminconsole/Views/Locations/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model adminconsole.Models.LocationsContactSpecialQualitiesViewModel
+﻿@model adminconsole.Models.AllTablesViewModel
 
 @{
     ViewData["Title"] = "Create";
