--- a/adminconsole/Views/Locations/Details.cshtml
+++ b/adminconsole/Views/Locations/Details.cshtml
@@ -62,13 +62,13 @@
             @Html.DisplayNameFor(model => model.Latitude)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Latitude)
+            @Model.Latitude
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Longitude)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Longitude)
+            @Model.Longitude
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.RetailOutlet)
