--- a/adminconsole/Views/Locations/Delete.cshtml
+++ b/adminconsole/Views/Locations/Delete.cshtml
@@ -210,157 +210,157 @@
             @Html.DisplayFor(model => model.SpecialQualities.AccessNotes)
         </dd>
         @{
-            if (Model.HoursPerDayOfTheWeek != null)
+            if (Model.DailyHours != null)
             {
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursMonOpen)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursMonOpen)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursMonOpen)
+                    @Html.DisplayFor(model => model.DailyHours.HoursMonOpen)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursMonClose)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursMonClose)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursMonClose)
+                    @Html.DisplayFor(model => model.DailyHours.HoursMonClose)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursTueOpen)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursTueOpen)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursTueOpen)
+                    @Html.DisplayFor(model => model.DailyHours.HoursTueOpen)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursTueClose)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursTueClose)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursTueClose)
+                    @Html.DisplayFor(model => model.DailyHours.HoursTueClose)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursWedOpen)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursWedOpen)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursWedOpen)
+                    @Html.DisplayFor(model => model.DailyHours.HoursWedOpen)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursThuOpen)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursThuOpen)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursThuOpen)
+                    @Html.DisplayFor(model => model.DailyHours.HoursThuOpen)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursFriOpen)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursFriOpen)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursFriOpen)
+                    @Html.DisplayFor(model => model.DailyHours.HoursFriOpen)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursFriClose)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursFriClose)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursFriClose)
+                    @Html.DisplayFor(model => model.DailyHours.HoursFriClose)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursSatOpen)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursSatOpen)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursSatOpen)
+                    @Html.DisplayFor(model => model.DailyHours.HoursSatOpen)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursSatClose)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursSatClose)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursSatClose)
+                    @Html.DisplayFor(model => model.DailyHours.HoursSatClose)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursSunOpen)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursSunOpen)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursSunOpen)
+                    @Html.DisplayFor(model => model.DailyHours.HoursSunOpen)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursSunClose)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursSunClose)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursSunClose)
+                    @Html.DisplayFor(model => model.DailyHours.HoursSunClose)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursDtmonOpen)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursDtmonOpen)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursDtmonOpen)
+                    @Html.DisplayFor(model => model.DailyHours.HoursDtmonOpen)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursDtmonClose)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursDtmonClose)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursDtmonClose)
+                    @Html.DisplayFor(model => model.DailyHours.HoursDtmonClose)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursDttueOpen)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursDttueOpen)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursDttueOpen)
+                    @Html.DisplayFor(model => model.DailyHours.HoursDttueOpen)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursDttueClose)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursDttueClose)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursDttueClose)
+                    @Html.DisplayFor(model => model.DailyHours.HoursDttueClose)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursDtwedOpen)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursDtwedOpen)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursDtwedClose)
+                    @Html.DisplayFor(model => model.DailyHours.HoursDtwedClose)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursDtthuOpen)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursDtthuOpen)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursDtthuOpen)
+                    @Html.DisplayFor(model => model.DailyHours.HoursDtthuOpen)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursDtthuClose)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursDtthuClose)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursDtthuClose)
+                    @Html.DisplayFor(model => model.DailyHours.HoursDtthuClose)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursDtfriOpen)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursDtfriOpen)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursDtfriOpen)
+                    @Html.DisplayFor(model => model.DailyHours.HoursDtfriOpen)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursDtfriClose)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursDtfriClose)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursDtfriClose)
+                    @Html.DisplayFor(model => model.DailyHours.HoursDtfriClose)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursDtsatOpen)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursDtsatOpen)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursDtsatOpen)
+                    @Html.DisplayFor(model => model.DailyHours.HoursDtsatOpen)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursDtsatClose)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursDtsatClose)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursDtsatClose)
+                    @Html.DisplayFor(model => model.DailyHours.HoursDtsatClose)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursDtsunOpen)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursDtsunOpen)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursDtsunOpen)
+                    @Html.DisplayFor(model => model.DailyHours.HoursDtsunOpen)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.HoursPerDayOfTheWeek.HoursDtsunClose)
+                    @Html.DisplayNameFor(model => model.DailyHours.HoursDtsunClose)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.HoursPerDayOfTheWeek.HoursDtsunClose)
+                    @Html.DisplayFor(model => model.DailyHours.HoursDtsunClose)
                 </dd>
             }
         }
