--- a/adminconsole/Views/Home/Privacy.cshtml
+++ b/adminconsole/Views/Home/Privacy.cshtml
@@ -1,6 +1,20 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
+﻿
+<div id="map" style="height: 100px; width: 100px;"></div>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
+
+
+
+@section Scripts{
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAR_KkOxYdpXhbRLPAvidcUJdfeXHHHAew&" async defer></script>
+
+    <script>
+        $(function(){
+            $(window).on('load', function(){
+                initMap();
+            });
+        });
+    </script>
+
+
+}
