--- a/adminconsole/Views/Locations/Edit.cshtml
+++ b/adminconsole/Views/Locations/Edit.cshtml
@@ -13,7 +13,7 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="LocationId" value="@Model.LocationId" />
-            <input type="hidden" asp-for="CoopLocationId" value ="@Model.CoopLocationId" class="form-control" />
+            <input type="hidden" asp-for="CoopLocationId" value="@Model.CoopLocationId" class="form-control" />
             <div class="form-group">
                 <label asp-for="TakeCoopData" class="control-label"></label>
                 <select asp-for="TakeCoopData">
@@ -74,7 +74,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Longitude" class="control-label"></label>
-                <input asp-for="Longitude" class="form-control" value="@Model.Longitude"/>
+                <input asp-for="Longitude" class="form-control" value="@Model.Longitude" />
                 <span asp-validation-for="Longitude" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -212,7 +212,7 @@
                 <label asp-for="SelfServiceOnly" class="control-label"></label>
                 <select asp-for="SelfServiceOnly" asp-items="Html.GetEnumSelectList<BooleanEnum>()">
                     <option selected="selected" value="">Select</option>
-                </select>                
+                </select>
                 <span asp-validation-for="SelfServiceOnly" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -362,10 +362,22 @@
     </div>
 </div>
 
+<div class="d-block" id="map-wrapper"></div>
+
+
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAR_KkOxYdpXhbRLPAvidcUJdfeXHHHAew&" async defer></script>
+
+    <script>
+        $(function () {
+            $(window).on('load', function () {
+                initMap();
+            });
+        });
+    </script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
