--- a/adminconsole/wwwroot/css/site.css
+++ b/adminconsole/wwwroot/css/site.css
@@ -74,11 +74,6 @@ a {
 html {
   font-size: 14px;
 }
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
 
 .border-top {
   border-top: 1px solid #e5e5e5;
@@ -98,23 +93,11 @@ button.accept-policy {
 
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
-  position: reLatitudeive;
-  min-height: 100%;
-}
+
 
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
-}
-.footer-relative {
-    bottom: 0;
-    color: #707070;
-    height: -2em;
-    left: 0;
-    position: relative;
-    white-space: nowrap;
-    line-height: 60px; /* Vertically center the text there */
 }
 
 /*#endregion*/
@@ -143,15 +126,43 @@ body {
 
 /*#region Edit Styling*/
 
-#map {
-    height: 40%;
-    display: contents;
-    position: relative;
-    margin: 10%;
+
+
+
+
+#map-wrapper {
+    height: 30vh;
+    width: 30vw;
 }
 
-#map iframe {
-    height: 20%;
-    width: 20%;
+
+
+
+
+/* Sticky footer styles
+-------------------------------------------------- */
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
 }
-/*#endregion*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
