--- a/adminconsole/Views/Locations/Edit.cshtml
+++ b/adminconsole/Views/Locations/Edit.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="SoftDelete" class="control-label"></label>
-                <select asp-for="SoftDelete">
+                <select asp-for="SoftDelete" disabled>
                     <option selected="selected" value="@Model.SoftDelete">@BooleanEnumExtensions.GetDisplayName(Model.SoftDelete)</option>
                 </select>
                 <span asp-validation-for="SoftDelete" class="text-danger"></span>
@@ -363,7 +363,6 @@
 </div>
 
 <div class="d-block" id="map-wrapper"></div>
-
 
 <div>
     <a asp-action="Index">Back to List</a>
