removed extra ampersand

--- a/adminconsole/Views/Locations/Edit.cshtml
+++ b/adminconsole/Views/Locations/Edit.cshtml
@@ -369,7 +369,7 @@
 </div>
 
 @section Scripts {
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAR_KkOxYdpXhbRLPAvidcUJdfeXHHHAew&" async defer></script>
+    <script hidden src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAR_KkOxYdpXhbRLPAvidcUJdfeXHHHAew" async defer></script>
 
     <script>
         $(function () {
