Added drop pin button to Edit

--- a/adminconsole/Views/Locations/Edit.cshtml
+++ b/adminconsole/Views/Locations/Edit.cshtml
@@ -380,7 +380,7 @@
                         <span asp-validation-for="Longitude" class="text-danger"></span>
                     </div>
 
-
+                    <button type="button" id="getLatLongBtn" onclick="getLatLongFromAddress()">Drop Pin</button>
 
                 </div>
 
