--- a/adminconsole/wwwroot/css/site.css
+++ b/adminconsole/wwwroot/css/site.css
@@ -152,6 +152,13 @@ body {
 
 
 
+#mapBlock-create {
+    height: 80em;
+    width: 100%;
+}
+
+
+
 #map-wrapper {
     width: 100%;
     height: 40%;
