--- a/adminconsole/Views/Locations/Create.cshtml
+++ b/adminconsole/Views/Locations/Create.cshtml
@@ -380,9 +380,13 @@
 
     <div id="mapBlock-create" class="col-md-8">
 
-        <div class="d-block" id="map-wrapper"></div>
+        <div class="d-flex justify-content-center">
 
-        <button type="button" id="getLatLongBtn" onclick="getLatLongFromAddress()">Drop Pin</button>
+            <button type="button" id="getLatLongBtn" onclick="getLatLongFromAddress()">Drop Pin</button>
+        
+        </div>
+
+        <div class="d-block" id="map-wrapper"></div>
 
     </div>
 </div>
